# devcontainer-env

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/config/: release-please-config.json
.github/workflows/: ci.yml  release.yml  test.yml  update.yml
crates/devcontainer-env/: Cargo.toml  flake.nix
crates/devcontainer-env/src/: main.rs
crates/devcontainer-env/src/app/: cli.rs  cmd.rs
crates/devcontainer-env/src/oci/: api.rs
crates/devcontainer-env/tests/: integration.rs
demo/: go.mod  main.go
demo-1/.devcontainer/: devcontainer.json  docker-compose.yml
demo/.devcontainer/: devcontainer.json
doc/tapes/: demo.tape
example/: README.md  flake.nix
example/.devcontainer/: devcontainer.json  docker-compose.yml
example/.github/: ci.yml
example/.github/workflows/: ci.yml
src/: main.rs
src/app/: cli.rs  cmd.rs
src/oci/: api.rs
tests/: integration.rs
