[package]
name = "devcontainer-env"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
bollard = "0.20.2"
clap = { version = "4.6.0", features = ["derive"] }
jsonc-parser = { version = "0.32.1", features = ["serde", "serde_json"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
url = "2.5.8"

[dev-dependencies]
assert_cmd = "2.2.0"
indoc = "2.0.7"
mockall = "0.14.0"
predicates = "3.1.4"
tempfile = "3.10.1"
