[package]
name = "devcontainer-env"
version = "0.3.2"
edition = "2021"
description = "Bridge devcontainers and the host environment — run host commands with devcontainer service environments and automatically rewrite container service URLs to host ports"
license = "MIT"
license-file = "LICENSE"
documentation = "https://github.com/devcontainer-env/devcontainer-env"
homepage = "https://github.com/devcontainer-env/devcontainer-env"
repository = "https://github.com/devcontainer-env/devcontainer-env"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
bollard = "0.20.2"
clap = { version = "4.6.1", features = ["derive"] }
jsonc-parser = { version = "0.32.1", features = ["serde", "serde_json"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
url = "2.5.8"

[dev-dependencies]
assert_cmd = "2.2.1"
indoc = "2.0.7"
mockall = "0.14.0"
predicates = "3.1.4"
tempfile = "3.10.1"
